My Cafila and Chat Box UI changes

--- a/pages/mycafila/mycafila.html
+++ b/pages/mycafila/mycafila.html
@@ -427,7 +427,7 @@
               </div>
               <div class="col-lg-10 col-md-10">
                 <div class="row no-gutters inboxppl">
-                  <div class="inboxName col-lg-4 col-md-4">
+                  <div class="inboxName col-lg-4 col-md-4 mob-hide">
                     <div class="row no-gutters">
                       <div class="searchbutn">
                         <button class="btnSearch"></button>
@@ -484,10 +484,11 @@
                   </div>
                   <div class="col-lg-8 col-md-8">
                     <div class="inboxMsg">
-                      <div class="msgsection chat">
+                      <div class="msgsection chat mycafila-chat">
                         <div class="card">
                           <div class="card-header msg_head">
                             <div class="d-flex bd-highlight">
+                              <span id="action_menu_btn1" class="action_menu-arrow"><i class="fas fa-arrow-left"></i></span>
                               <div class="img_cont">
                                 <img
                                   src="https://static.turbosquid.com/Preview/001292/481/WV/_D.jpg"
@@ -652,7 +653,7 @@
         aria-hidden="true"
       >
         <!-- Add class .modal-full-height and then add class .modal-right (or other classes from list above) to set a position to the modal -->
-        <div class="modal-dialog modal-full-height modal-right" role="document">
+        <div class="modal-dialog modal-full-height modal-right create-mycafila" role="document">
           <div class="modal-content">
             <div class="modal-header">
               <h4 class="modal-title w-100" id="myModalLabel">
@@ -709,7 +710,7 @@
                           placeholder="Search"
                         />
                       </div>
-                      <ul class="list-group search-line">
+                      <ul class="list-group search-line cafila-search">
                         <li class="list-group-item">
                           <img
                             src="https://bootdey.com/img/Content/avatar/avatar1.png"
