Created problem request and solution

--- a/pages/problemRequest/problemRequest.html
+++ b/pages/problemRequest/problemRequest.html
@@ -471,11 +471,13 @@
                   </button>
 
                   <button type="button" class="btn btn-outline-primary">
-                    <img src="../../images/markericn.png" /> Add Marker
+                    <img src="../../images/markericn.png"> Add Marker
                   </button>
                   <button type="button" class="btn btn-outline-primary">
-                    <img src="../../images/markericn.png" /> Clear Marker
+                    <img src="../../images/markericn.png"> Clear Marker
                   </button>
+
+
                 </div>
 
                 <div class="row pt-3">
@@ -493,25 +495,26 @@
                   </div>
                 </div>
 
+               
                 <div class="row justify-content-end pt-3">
                   <button class="btn btn-light">
                     <i class="fas fa-paperclip"></i> Attach files
                   </button>
                 </div>
                 <div class="row soltion-screenshot">
-                  <img src="../../images/video.png" height="80" width="80" />
-                  <img src="../../images/video.png" height="80" width="80" />
-                  <img src="../../images/video.png" height="80" width="80" />
-                  <img src="../../images/video.png" height="80" width="80" />
+                    <img src="../../images/video.png" height="80" width="80">
+                    <img src="../../images/video.png" height="80" width="80">
+                    <img src="../../images/video.png" height="80" width="80">
+                    <img src="../../images/video.png" height="80" width="80">
+                    
                 </div>
+
 
                 <div class="row">
                   <hr />
                   <div class="review-block">
                     <div class="row">
-                      <div class="close-icon">
-                        <i class="fas fa-window-close"></i>
-                      </div>
+                        <div class="close-icon"><i class="fas fa-window-close"></i></div>
                       <div class="col-sm-3">
                         <img
                           src="http://dummyimage.com/60x60/666/ffffff&text=No+Image"
@@ -601,9 +604,7 @@
                     </div>
                     <hr />
                     <div class="row">
-                      <div class="close-icon">
-                        <i class="fas fa-window-close"></i>
-                      </div>
+                        <div class="close-icon"><i class="fas fa-window-close"></i></div>
                       <div class="col-sm-3">
                         <img
                           src="http://dummyimage.com/60x60/666/ffffff&text=No+Image"
@@ -691,9 +692,7 @@
                     </div>
                     <hr />
                     <div class="row">
-                      <div class="close-icon">
-                        <i class="fas fa-window-close"></i>
-                      </div>
+                        <div class="close-icon"><i class="fas fa-window-close"></i></div>
                       <div class="col-sm-3">
                         <img
                           src="http://dummyimage.com/60x60/666/ffffff&text=No+Image"
@@ -808,48 +807,6 @@
                     </div>
                   </form>
                 </div>
-                <div class="right-attachments mb-1">
-                  <div>
-                    <span>filename.pdf</span>
-                    <i class="fas fa-times-circle"></i>
-                  </div>
-                  <div>
-                    <span>filename1.pdf</span>
-                    <i class="fas fa-times-circle"></i>
-                  </div>
-                  <div>
-                    <span>filename2.pdf</span>
-                    <i class="fas fa-times-circle"></i>
-                  </div>
-                  <div>
-                    <span>filename3.pdf</span>
-                    <i class="fas fa-times-circle"></i>
-                  </div>
-                  <div>
-                    <span>filename4.pdf</span>
-                    <i class="fas fa-times-circle"></i>
-                  </div>
-                  <div>
-                    <span>filename.pdf</span>
-                    <i class="fas fa-times-circle"></i>
-                  </div>
-                  <div>
-                    <span>filename1.pdf</span>
-                    <i class="fas fa-times-circle"></i>
-                  </div>
-                  <div>
-                    <span>filename2.pdf</span>
-                    <i class="fas fa-times-circle"></i>
-                  </div>
-                  <div>
-                    <span>filename3.pdf</span>
-                    <i class="fas fa-times-circle"></i>
-                  </div>
-                  <div>
-                    <span>filename4.pdf</span>
-                    <i class="fas fa-times-circle"></i>
-                  </div>
-                </div>
 
                 <div class="solution-button">
                   <button
@@ -869,6 +826,31 @@
                   <button type="button" class="btn btn-primary btn-block">
                     Save & Share
                   </button>
+                </div>
+
+                <div class="attachments">
+                  <div class="row attachments-row">
+                    <div class="col-md-3 thumbnail attachments-thumbnail">
+                      <img src="../../images/cameraicn.png" width="70px" />
+                    </div>
+                    <div class="col-md-3 thumbnail attachments-thumbnail">
+                      <img src="../../images/feed_1.png" width="70px" />
+                    </div>
+                    <div class="col-md-3 thumbnail attachments-thumbnail">
+                      <img src="../../images/fileIcn.png" width="70px" />
+                    </div>
+                  </div>
+                  <div class="row attachments-row">
+                    <div class="col-md-3 thumbnail attachments-thumbnail">
+                      <img src="../../images/cameraicn.png" width="70px" />
+                    </div>
+                    <div class="col-md-3 thumbnail attachments-thumbnail">
+                      <img src="../../images/feed_1.png" width="70px" />
+                    </div>
+                    <div class="col-md-3 thumbnail attachments-thumbnail">
+                      <img src="../../images/fileIcn.png" width="70px" />
+                    </div>
+                  </div>
                 </div>
 
                 <div class="">
