Solutions and Problems page UI

--- a/pages/myProblems/mysolution.html
+++ b/pages/myProblems/mysolution.html
@@ -8,7 +8,7 @@
     <!-- Google Font: Source Sans Pro -->
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback"
+      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,100%0&display=fallback"
     />
     <!-- Font Awesome Icons -->
     <link
@@ -352,7 +352,7 @@
       <div class="content-wrapper">
         <!-- Main content -->
         <div class="content">
-          <div class="container-fluid maincontentRow">
+          <div class="container-fluid maincontentRow mysolutions-page">
             <div class="row">
               <img src="../../images/backarrow.png" />
             </div>
@@ -365,7 +365,7 @@
                       <img
                         src="../../images/avatar.png"
                         id="imgProfile"
-                        style="width: 100px; height: 100px;"
+                        style="width: 100%; height: auto;"
                         class="img-thumbnail"
                       />
                     </div>
@@ -398,58 +398,58 @@
                 <div class="attachments">
                   <div class="row attachments-row">
                     <div class="col-md-3 thumbnail attachments-thumbnail">
-                      <img src="../../images/cameraicn.png" width="70px" />
+                      <img src="../../images/cameraicn.png" width="100%" />
                     </div>
                     <div class="col-md-3 thumbnail attachments-thumbnail">
-                      <img src="../../images/feed_1.png" width="70px" />
+                      <img src="../../images/feed_1.png" width="100%" />
                     </div>
                     <div class="col-md-3 thumbnail attachments-thumbnail">
-                      <img src="../../images/fileIcn.png" width="70px" />
-                    </div>
-                  </div>
-                  <div class="row attachments-row">
-                    <div class="col-md-3 thumbnail attachments-thumbnail">
-                      <img src="../../images/cameraicn.png" width="70px" />
-                    </div>
-                    <div class="col-md-3 thumbnail attachments-thumbnail">
-                      <img src="../../images/feed_1.png" width="70px" />
-                    </div>
-                    <div class="col-md-3 thumbnail attachments-thumbnail">
-                      <img src="../../images/fileIcn.png" width="70px" />
+                      <img src="../../images/fileIcn.png" width="100%" />
                     </div>
                   </div>
                   <div class="row attachments-row">
                     <div class="col-md-3 thumbnail attachments-thumbnail">
-                      <img src="../../images/cameraicn.png" width="70px" />
+                      <img src="../../images/cameraicn.png" width="100%" />
                     </div>
                     <div class="col-md-3 thumbnail attachments-thumbnail">
-                      <img src="../../images/feed_1.png" width="70px" />
+                      <img src="../../images/feed_1.png" width="100%" />
                     </div>
                     <div class="col-md-3 thumbnail attachments-thumbnail">
-                      <img src="../../images/fileIcn.png" width="70px" />
+                      <img src="../../images/fileIcn.png" width="100%" />
                     </div>
                   </div>
                   <div class="row attachments-row">
                     <div class="col-md-3 thumbnail attachments-thumbnail">
-                      <img src="../../images/cameraicn.png" width="70px" />
+                      <img src="../../images/cameraicn.png" width="100%" />
                     </div>
                     <div class="col-md-3 thumbnail attachments-thumbnail">
-                      <img src="../../images/cameraicn.png" width="70px" />
+                      <img src="../../images/feed_1.png" width="100%" />
                     </div>
                     <div class="col-md-3 thumbnail attachments-thumbnail">
-                      <img src="../../images/cameraicn.png" width="70px" />
+                      <img src="../../images/fileIcn.png" width="100%" />
+                    </div>
+                  </div>
+                  <div class="row attachments-row">
+                    <div class="col-md-3 thumbnail attachments-thumbnail">
+                      <img src="../../images/cameraicn.png" width="100%" />
+                    </div>
+                    <div class="col-md-3 thumbnail attachments-thumbnail">
+                      <img src="../../images/cameraicn.png" width="100%" />
+                    </div>
+                    <div class="col-md-3 thumbnail attachments-thumbnail">
+                      <img src="../../images/cameraicn.png" width="100%" />
                     </div>
                   </div>
 
                   <div class="row attachments-row">
                     <div class="col-md-3 thumbnail attachments-thumbnail">
-                      <img src="../../images/closeImg.png" width="70px" />
+                      <img src="../../images/closeImg.png" width="100%" />
                     </div>
                     <div class="col-md-3 thumbnail attachments-thumbnail">
-                      <img src="../../images/danishM.png" width="70px" />
+                      <img src="../../images/danishM.png" width="100%" />
                     </div>
                     <div class="col-md-3 thumbnail attachments-thumbnail">
-                      <img src="../../images/Drama_over.png" width="70px" />
+                      <img src="../../images/Drama_over.png" width="100%" />
                     </div>
                   </div>
                 </div>
@@ -780,7 +780,7 @@
                       <img
                         src="../../images/avatar.png"
                         id="imgProfile"
-                        style="width: 100px; height: 100px;"
+                        style="width: 100%; height: auto;"
                         class="img-thumbnail"
                       />
                     </div>
@@ -871,7 +871,7 @@
                   </button>
                 </div>
 
-                <div class="">
+                <div class="download-all-btn">
                   <button type="button" class="btn btn-outline-primary">
                     <i class="fas fa-file-download"></i> Download All
                   </button>
