--- a/pages/myProblems/problem.html
+++ b/pages/myProblems/problem.html
@@ -350,7 +350,7 @@
       </aside>
 
       <!-- Content Wrapper. Contains page content -->
-      <div class="content-wrapper">
+      <div class="content-wrapper page-problems">
         <!-- Main content -->
         <div class="content">
           <div class="container-fluid">
@@ -430,7 +430,7 @@
               <div class="col-lg-10 col-md-10">
                 <div class="row no-gutters inboxppl">
                   <div class="inboxName col-lg-4 col-md-4">
-                    <div class="row no-gutters">
+                    <div class="row no-gutters mob-hide">
                       <div class="searchbutn">
                         <button class="btnSearch"></button>
                       </div>
