--- a/pages/problemRequest/problemRequest.html
+++ b/pages/problemRequest/problemRequest.html
@@ -616,7 +616,7 @@
                       </div>
                     </div>
 
-                    <div class="screen3 mr-3 ml-3" style="display: none;">
+                    <div class="screen3 mr-3 ml-3" >
                       <div class="row  screen3-title">
                         <p>
                           <b
