--- a/pages/problemRequest/problemRequest.html
+++ b/pages/problemRequest/problemRequest.html
@@ -476,7 +476,7 @@
                         <i class="fas fa-angle-right"></i>
                       </button>
                     </div>
-                    <div class="screen1" style="display: none;">
+                    <div class="screen1" style="">
                       <div class="row ml-3">
                         <p><b>Need help to solve a problem? No problem!</b></p>
                       </div>
@@ -616,7 +616,7 @@
                       </div>
                     </div>
 
-                    <div class="screen3 mr-3 ml-3" >
+                    <div class="screen3 mr-3 ml-3" style="display: none">
                       <div class="row  screen3-title">
                         <p>
                           <b
