--- a/pages/soltuionRequest/solutionRequest.html
+++ b/pages/soltuionRequest/solutionRequest.html
@@ -616,7 +616,7 @@
                       </div>
                     </div>
 
-                    <div class="screen3 mr-3 ml-3" style="display: none;">
+                    <div class="screen3 mr-3 ml-3" style="">
                       <div class="row  screen3-title">
                         <p>
                           <b
@@ -709,7 +709,7 @@
                     </div>
 
                      <!-- Soltuion Screen  -->
-                     <div class="solution-screen3 mr-3 ml-3">
+                     <div class="solution-screen3 mr-3 ml-3" style="display: none;">
                       <div class="row  screen3-title">
                         <p>
                           <b
