--- a/pages/problemRequest/problemRequest.html
+++ b/pages/problemRequest/problemRequest.html
@@ -427,7 +427,7 @@
               <div class="col-lg-10 col-md-10">
                 <div class="row no-gutters inboxppl">
                   <div class="inboxName col-lg-4 col-md-4">
-                    <div class="row no-gutters">
+                    <div class="row no-gutters mob-hide">
                       <div class="searchbutn">
                         <button class="btnSearch"></button>
                       </div>
@@ -440,7 +440,7 @@
                       />
                     </div>
 
-                    <div class="row no-gutters">
+                    <div class="row no-gutters mob-hide">
                       <ul class="responsive-tabs inboxtab">
                         <li class="pplMsg selected">
                           <a href="#chat-tab-1" class="ppl" target="_self">
@@ -476,6 +476,7 @@
                         <i class="fas fa-angle-right"></i>
                       </button>
                     </div>
+                    <div class="multi-screen-level">
                     <div class="screen1" style="">
                       <div class="row ml-3">
                         <p><b>Need help to solve a problem? No problem!</b></p>
@@ -574,7 +575,7 @@
                       </div>
                       <div class="negotiation-panle mt-4 ml-3 mr-3">
                         <div class="row mt-2">
-                          <div class="col-md-9">
+                          <div class="col-md-9 amount-negotiation-panel">
                             Super is willing to solve your problem for a fee :
                           </div>
                           <div class="col-md-3">
@@ -683,7 +684,7 @@
                             height="100"
                           />
                         </div>
-                        <div class="col-md-9">
+                        <div class="col-md-9 user-avtar-details">
                            
                                     <div class="container" style="border-bottom:1px solid black">
                                       <h2>John Doe</h2>
@@ -700,14 +701,14 @@
                         </div>
 
                       </div>
-                      <div>
+                      <div class="user-avtar-details">
                         <div class="row justify-content-center">
                           <button type="button" class="btn btn-primary">Share contact details</button>
 
                         </div>
                       </div>
                     </div>
-
+                  </div>
                     
 
                   </div>
