--- a/pages/problemRequest/problemRequest.html
+++ b/pages/problemRequest/problemRequest.html
@@ -477,7 +477,7 @@
                       </button>
                     </div>
                     <div class="multi-screen-level">
-                    <div class="screen1" style="">
+                    <div class="screen1" style="display: none">
                       <div class="row ml-3">
                         <p><b>Need help to solve a problem? No problem!</b></p>
                       </div>
@@ -617,7 +617,7 @@
                       </div>
                     </div>
 
-                    <div class="screen3 mr-3 ml-3" style="display: none">
+                    <div class="screen3 mr-3 ml-3" >
                       <div class="row  screen3-title">
                         <p>
                           <b
