--- a/pages/beMyMentor/beMyMentor.html
+++ b/pages/beMyMentor/beMyMentor.html
@@ -317,7 +317,7 @@
                         <div class="col-lg-10 col-md-10">
                             <div class="row no-gutters inboxppl">
                                 <div class="inboxName col-lg-4 col-md-4 ">
-                                    <div class="row no-gutters">
+                                    <div class="row no-gutters mob-hide">
                                         <div class="searchbutn">
                                             <button class="btnSearch"></button>
                                         </div>
@@ -325,7 +325,7 @@
                                             placeholder="Search Message or Name…" />
                                     </div>
 
-                                    <div class="row no-gutters scroller">
+                                    <div class="row no-gutters scroller mob-hide">
                                         <ul class="responsive-tabs inboxtab">
                                             <li class="pplMsg  feedback">
                                                 <a href="#feed-tab-1" class="ppl" target="_self">
