--- a/pages/network/network.html
+++ b/pages/network/network.html
@@ -489,7 +489,7 @@
                           </form>
                         </div>
                       </div>
-                      <div class="card-body p-0">
+                      <div class="card-body p-0 responsive-table">
                         <table class="table network-table table-responsiv">
                           <thead>
                             <tr>
