--- a/pages/newConnections/newConnections.html
+++ b/pages/newConnections/newConnections.html
@@ -318,17 +318,17 @@
                             <div class="row no-gutters inboxppl">
                                 <div class="inboxName connections col-lg-6 col-md-6 ">
                                     <div class="row no-gutters scroller ">
-                                        <ul class="responsive-tabs inboxtab">
+                                        <ul class="responsive-tabs inboxtab new-connections">
                                             <li class="pplMsg feedback">
                                                 <a href="#feed-tab-1" class="ppl" target="_self">
                                                     <div class="row no-gutters">
                                                         <div class="col-lg-7 col-md-7">
                                                             <div class="row no-gutters">
-                                                                <div class="col-lg-2">
+                                                                <div class="col-sm-2 res-img">
                                                                     <img style="width: 100%;"
                                                                         src="../../images/jamie.png" alt="" />
                                                                 </div>
-                                                                <div class="col-lg-10">
+                                                                <div class="col-lg-10 res-desp">
                                                                     <p style="margin-left: 4%;">David James wants to
                                                                         Connect with you.</p>
                                                                 </div>
@@ -346,11 +346,11 @@
                                                     <div class="row no-gutters">
                                                         <div class="col-lg-7 col-md-7">
                                                             <div class="row no-gutters">
-                                                                <div class="col-sm-2">
+                                                                <div class="col-sm-2 res-img">
                                                                     <img style="width: 100%;"
                                                                         src="../../images/pharella.png" alt="" />
                                                                 </div>
-                                                                <div class="col-sm-10">
+                                                                <div class="col-sm-10 res-desp">
                                                                     <p style="margin-left: 4%;">Tony Stark wants to
                                                                         connect with</p>
                                                                 </div>
@@ -368,11 +368,11 @@
                                                     <div class="row no-gutters">
                                                         <div class="col-lg-7 col-md-7">
                                                             <div class="row no-gutters">
-                                                                <div class="col-sm-2">
+                                                                <div class="col-sm-2 res-img">
                                                                     <img style="width: 100%;"
                                                                         src="../../images/Jessica.png" alt="" />
                                                                 </div>
-                                                                <div class="col-sm-10">
+                                                                <div class="col-sm-10 res-desp">
                                                                     <p style="margin-left: 4%;">Anya Shroff wants to
                                                                         connect with you.</p>
                                                                 </div>
@@ -390,11 +390,11 @@
                                                     <div class="row no-gutters">
                                                         <div class="col-lg-7 col-md-7">
                                                             <div class="row no-gutters">
-                                                                <div class="col-sm-2">
+                                                                <div class="col-sm-2 res-img">
                                                                     <img style="width: 100%;"
                                                                         src="../../images/Troy.png" alt="" />
                                                                 </div>
-                                                                <div class="col-sm-10">
+                                                                <div class="col-sm-10 res-desp">
                                                                     <p style="margin-left: 4%;">Yuleen Chu wants to
                                                                         connect with you.</p>
                                                                 </div>
@@ -412,11 +412,11 @@
                                                     <div class="row no-gutters">
                                                         <div class="col-lg-7 col-md-7">
                                                             <div class="row no-gutters">
-                                                                <div class="col-sm-2">
+                                                                <div class="col-sm- res-img">
                                                                     <img style="width: 100%;"
                                                                         src="../../images/scot.png" alt="" />
                                                                 </div>
-                                                                <div class="col-sm-10">
+                                                                <div class="col-sm-10 res-desp">
                                                                     <p style="margin-left: 4%;">Ellen James wants to
                                                                         connect with you.</p>
                                                                 </div>
