--- a/pages/problemRequest/problemRequest.html
+++ b/pages/problemRequest/problemRequest.html
@@ -518,6 +518,21 @@
                             evolved over the years, sometimes by accident,
                             sometimes on purpose (injected humour and the like).
                           </p>
+              
+                        </div>
+                      </div>
+                      <div class="image-panel">
+                        <div class="col-md-2 img-container">
+                          <img src="https://posts.micafila.com/uploads/DP/260/9103cca5-56af-41ae-80b9-913687fa554a.png" alt="Cinque Terre" width="100%" height="auto">
+                        </div>
+                        <div class="col-md-2 img-container">
+                          <img src="https://posts.micafila.com/uploads/DP/260/9103cca5-56af-41ae-80b9-913687fa554a.png" alt="Cinque Terre" width="100%" height="auto">
+                        </div>
+                        <div class="col-md-2 img-container">
+                          <img src="https://posts.micafila.com/uploads/DP/260/9103cca5-56af-41ae-80b9-913687fa554a.png" alt="Cinque Terre" width="100%" height="auto">
+                        </div>
+                        <div class="col-md-2 img-container">
+                          <img src="https://posts.micafila.com/uploads/DP/260/9103cca5-56af-41ae-80b9-913687fa554a.png"  alt="Cinque Terre" width="100%" height="auto">
                         </div>
                       </div>
                       <div class="row justify-content-end mt-3 mr-3">
