--- a/index.html
+++ b/index.html
@@ -261,22 +261,6 @@
 
         <!-- Sidebar -->
         <div class="sidebar">
-          <!-- SidebarSearch Form -->
-          <div class="form-inline">
-            <div class="input-group" data-widget="sidebar-search">
-              <input
-                class="form-control form-control-sidebar"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-              />
-              <div class="input-group-append">
-                <button class="btn btn-sidebar">
-                  <i class="fas fa-search fa-fw"></i>
-                </button>
-              </div>
-            </div>
-          </div>
 
           <!-- Sidebar Menu -->
           <nav class="mt-2">
@@ -296,8 +280,8 @@
                   </p>
                 </a>
               </li>
-              <li class="nav-item menu-open">
-                <a href="#" class="nav-link active">
+              <li class="nav-item menu-open active">
+                <a href="#" class="nav-link ">
                   <i class="fas fa-tachometer-alt"></i>
                   <p>
                     Dashboard
